@@ -1,3 +1,7 @@
+2012-04-21 Phillipe Roussel <p.o.roussel@free.fr>
+
+	* Source/NSConnection+DBus.m: Move declarations before statements.
+
 2012-03-25 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Headers/NSConnection+DBus.h
